syntax = "proto3";

option csharp_namespace = "GrpcServer";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);


  rpc SayYeah (SayYeahMessage) returns (SayYeahResponse);
}

message SayYeahMessage {
  string yeah = 1;
}

message SayYeahResponse {
  string yeah = 1;
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}
